--- a/functions/index.html
+++ b/functions/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Loops</h1>
+    <h1>functions</h1>
     <script src="index.js"></script>
 </body>
 </html>
